--- a/apps/helpdesk/src/AIJourney/components/PlaygroundPreview/PlaygroundPreview.less
+++ b/apps/helpdesk/src/AIJourney/components/PlaygroundPreview/PlaygroundPreview.less
@@ -41,6 +41,8 @@
         box-shadow:
             0 1.448px 3.862px 0 rgba(0, 0, 0, 0.08),
             -0.966px -0.966px 0.483px 0 rgba(0, 0, 0, 0.12) inset;
+        max-width: 300px;
+        overflow-wrap: break-word;
         padding: var(--layout-spacing-s);
         white-space: pre-line;
     }
